# slack-bot-claude-code

./: .env.example  .gitignore  BRAIN_DUMP.md  CLAUDE.md  Makefile  README.md  dump.rdb  pyproject.toml  slack-app-manifest.json
claude_bot/: celery_app.py  credentials.py  github_auth.py  main.py  markdown_converter.py  slack_auth.py  slack_client.py  tasks.py  worker.py
